Nat Sloss in PR kern/46516: advance fb pointer by stride, not logical width of the splash image.